/*
irpc.proto
Author: Kunyao Wu
the definition of data structure and service
for table transmisison(PushTable)
and executer call(ExecuterCaller)
*/

syntax = "proto3";

option go_package = "irpc";

package irpc;

service PushTable {
  rpc PushTable(Table) returns (IrpcStatus) {}
}

service ExecuterCaller{
  rpc ExecuterCall(IrpcCallReq) returns (IrpcStatus) {}
}

message IrpcCallReq {
  int64 Txnid = 1;
}

message IrpcStatus {
  int64 isSuc = 1;
}

message Table {
  string operation = 1; //insert into TableName (Col1, Col2, Col3)
  int64 rowlength = 2; //
  repeated string record = 3;  //(Val1, Val2, Val3)
}